--- a/public/themes/simpleboot3/portal/form.html
+++ b/public/themes/simpleboot3/portal/form.html
@@ -1,149 +1,34 @@
-
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta name="format-detection" content="telephone=no">
-		<meta name="apple-mobile-web-app-capable" content="yes">
-		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-		<meta name="renderer" content="webkit">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="screen-orientation" content="portrait">
-		<meta name="x5-orientation" content="portrait">
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
-		<title>官网-华劳集团股份有限公司</title>
-		<meta name="keywords" content="华劳集团股份有限公司,政务招聘服务,政务编外派遣服务,政务外包服务,人才招聘服务,劳务派遣服务,岗位/产线外包服务,灵活用工服务,建筑工程劳务分包,机电安装劳务分包,雇工伞,高管福利,员工关怀计划,建工宝,客房清洁HCO,公共区域保洁,PA 保洁,保洁岗位外包">
-		<meta name="description" content="华劳集团股份有限公司创始于2007年，是中国人力资源服务行业的先行者，旗下运营主体有华劳人力资源、金伞保险代理、中政服务外包、中劳建筑劳务分包、中洁清洁、中朗安服六大事业集群，是一家致力于人力资源全产业链管理与开发的综合性商业服务集团。">
-		<meta http-equiv="Cache-Control" content="no-transform">
-		<meta http-equiv="Cache-Control" content="no-siteapp">
-		<meta http-equiv="Pragma" content="no-cache">
-		<meta http-equiv="Cache-Control" content="no-cache">
-		<meta http-equiv="Expires" content="0">
-		<script src="__TMPL__/public/assets/style/js/flexible.js"></script>
-		<link href="__TMPL__/public/assets/style/css/bootstrap.min.3.3.7.css" rel="stylesheet">
-		<link href="__TMPL__/public/assets/style/css/slick.css" rel="stylesheet">
-		<link href="__TMPL__/public/assets/style/css/slick-theme.css" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="__TMPL__/public/assets/style/css/reset.css?v=0.01">
-		<link rel="stylesheet" type="text/css" href="__TMPL__/public/assets/style/css/common.css?v=0.01">
-		<link rel="stylesheet" type="text/css" href="__TMPL__/public/assets/style/css/index.css?v=0.01">
-		<link href="__TMPL__/public/assets/style/font/iconfont.css" rel="stylesheet">
-		<link rel="shortcut icon" href="__TMPL__/public/assets/style/imgs/favicon.ico">
-		<link href="__TMPL__/public/assets/style/css/contact.css" rel="stylesheet">
-		<link href="__TMPL__/public/assets/style/css/map.css" rel="stylesheet">
-		<link href="__TMPL__/public/assets/style/css/news.css" rel="stylesheet">
-		<script src="__TMPL__/public/assets/style/js/jquery.min.js"></script>
-		<style>
-			*{margin: 0;padding: 0;border: 0;}
-			body{
-				width: 100%;
-				background: url(__TMPL__/public/assets/style/img/form_bg.png) 0% 0% / cover;
-				background-size: 100% 100%;
-				min-height: 100vh;
-				display: flex;
-				justify-content: center;
-				align-items: center;
-			}
-			.container{
-				flex: 1;
-				max-width: 10.71rem;
-				padding-bottom: 0.71rem;
-				background: #fff;
-				border-radius: 2px;
-				border: 1px solid #f6f6fa;
-				box-sizing: border-box;
-			}
-			.container .tableTitle {
-			    text-align: center;
-			    font-size: 0.42rem;
-				font-weight: bolder;
-			    padding: 0.71rem 0;
-			    color:#121212;
-			}
-			.container .contbox {
-			    padding: 0 10%;
-			}
-			.formbox{
-				width: 94%;
-				margin: 0 auto;
-				line-height: 0.67rem;
-			}
-			.form-control{
-				width: calc(100% - 2.5rem);
-				height: 0.67rem;
-				color: #121212;
-				font-size: 0.32rem;
-			}
-			label{
-				font-size: 0.32rem;
-				font-weight: 500;
-				width: 2rem;
-				text-align: right;
-			}
-			.poscode{
-				position: absolute;
-				top: 24px;
-				right: 0;
-				width: 140px;
-				bottom: 0;
-				z-index: 2;
-			}
-			.poscode .btn{
-				width: 100%;
-			}
-			.btn-danger{
-				width: 2.85rem;
-				height: 0.67rem;
-				background: #FF5000;
-				border: solid 1px #FF5000;
-			}
-			@media (max-width: 768px) {
-				body{
-					calc(100vh - 7.46rem)
-				}
-				.container{
-					max-width: 100%;
-				}
-				.container .tableTitle{
-					font-size: 1.2rem;
-					padding: 2.66rem 0;
-				}
-				.formbox{
-					line-height: 2.53rem;
-				}
-				.form-control{
-					width: calc(100% - 4.5rem);
-					height: 2.53rem;
-					font-size: 0.86rem;
-				}
-				label{
-					font-size: 0.86rem;
-					width: 4rem;
-				}
-				.btn-danger{
-					width: 6.66rem;
-					height: 2.53rem;
-				}
-			}
-		</style>
-	</head>
-	<body>
-			<div class="inner">
-				<div class="container">
-					<div class="tableTitle">预约华劳专属顾问 获取更多解决方案</div>
-					<div class="register table_form">
-						<form class="formbox" id = 'form'>
-						  <div class="form-group flex-box">
-						    <label for="exampleInputEmail1">姓名</label>
-						    <input type="text" class="form-control" placeholder="请输入您的姓名" name="post[name]" id = 'name'>
-						  </div>
-						<div class="form-group flex-box">
-							<label for="exampleInputEmail1"><span style="color: red;">* </span>手机号</label>
-							<input type="text" class="form-control" placeholder="请输入您的手机号" name="post[phone]" id="phone">
-						</div>
-						  <div class="form-group flex-box">
-						    <label for="exampleInputPassword1">公司名称</label>
-						    <input type="text" class="form-control" placeholder="请输入公司名称"  name="post[companyname]" >
-						  </div>
-						<!--  <div class="form-group">
+
+<head>
+    <include file="public@head" />
+    <style>
+        body {
+            background-color: #F5F5F5;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="inner form-box">
+        <div class="container">
+            <div class="tableTitle">预约华劳专属顾问 获取更多解决方案</div>
+            <div class="register table_form">
+                <form class="formbox" id='form'>
+                    <div class="form-group flex-box">
+                        <label for="exampleInputEmail1">姓名</label>
+                        <input type="text" class="form-control" placeholder="请输入您的姓名" name="post[name]" id='name'>
+                    </div>
+                    <div class="form-group flex-box">
+                        <label for="exampleInputEmail1">手机号<span style="color: red;">* </span></label>
+                        <input type="text" class="form-control" placeholder="请输入您的手机号" name="post[phone]" id="phone">
+                    </div>
+                    <div class="form-group flex-box">
+                        <label for="exampleInputPassword1">公司名称</label>
+                        <input type="text" class="form-control" placeholder="请输入公司名称" name="post[companyname]">
+                    </div>
+                    <!--  <div class="form-group">
 						    <label for="exampleInputFile">地址</label>
 							<div style="display: flex;justify-content: space-between;">
 								<select class="form-control" style="width: 50%;">
@@ -162,15 +47,15 @@
 								</select>
 							</div>
 						  </div>-->
-						    <div class="form-group flex-box">
-						      <label for="exampleInputPassword1">咨询内容</label>
-						      <input type="text" class="form-control" placeholder="请输入咨询内容" name="post[buisiness]" id ="buisiness">
-						    </div>
-							<div class="form-group flex-box">
-							  <label for="exampleInputPassword1">邮箱</label>
-							  <input type="email" class="form-control" placeholder="请输入邮箱" name="post[email]" id="email">
-							</div>
-							<!--<div class="form-group" style="position: relative;">
+                    <div class="form-group flex-box">
+                        <label for="exampleInputPassword1">咨询内容</label>
+                        <input type="text" class="form-control" placeholder="请输入咨询内容" name="post[buisiness]" id="buisiness">
+                    </div>
+                    <div class="form-group flex-box">
+                        <label for="exampleInputPassword1">邮箱</label>
+                        <input type="email" class="form-control" placeholder="请输入邮箱" name="post[email]" id="email">
+                    </div>
+                    <!--<div class="form-group" style="position: relative;">
 							  <label for="exampleInputPassword1">手机号</label>
 							  <input type="tel" class="form-control" placeholder="请输入手机号">
 							  <div class="poscode">
@@ -181,119 +66,120 @@
 							  <label for="exampleInputPassword1">验证码</label>
 							  <input type="text" class="form-control" placeholder="请输入验证码">
 							</div>-->
-							<div style="text-align: center;margin-top: 30px;">
-								<button type="button" class="btn btn-danger" id="submit-btn">提交</button>
-							</div>
-						</form>
-					</div>
-				</div>
-			</div>
-			
-	
-	<script src="__TMPL__/public/assets/style/js/jquery.min.js"></script>
+                    <div style="text-align: center;margin-top: 30px;">
+                        <button type="button" class="btn btn-danger" id="submit-btn">提交</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <include file="public@footer" />
 
-	<!-- <script src="__TMPL__/public/assets/style/js/jquery.easing.min.js"></script>
+    <script src="__TMPL__/public/assets/style/js/jquery.min.js"></script>
+
+    <!-- <script src="__TMPL__/public/assets/style/js/jquery.easing.min.js"></script>
 	<script src="__TMPL__/public/assets/style/js/jquery.isotope.min.js"></script>
 	<script src="__TMPL__/public/assets/style/js/waypoints.min.js"></script> -->
-	<!-- <script src="__TMPL__/public/assets/style/js/common.js"></script> -->
-	<!-- <script src="__TMPL__/public/assets/style/js/bootstrap.min.js"></script> -->
+    <!-- <script src="__TMPL__/public/assets/style/js/common.js"></script> -->
+    <!-- <script src="__TMPL__/public/assets/style/js/bootstrap.min.js"></script> -->
 
-	<!-- <script src="__TMPL__/public/assets/style/js/index.js"></script> -->
-	<script>
-		$(function(){
-			$("#submit-btn").on("click",function(){
-				var sName = $("#name").val();
-				var sMobile = $("#phone").val();
-				var sbuisiness = $("#buisiness").val();
-				var email = $("#email").val();
-				// if(!sName){
-				// 	alert("请填写姓名");
-				// 	return false;
-				// };
-				if(!sMobile){
-					alert("请填写手机号");
-					return false;
-				}else if(!isPhone(sMobile)){
-					alert("请填写正确的手机号");
-					return false;
-				};
-				// if(!sbuisiness){
-				// 	alert("请填写咨询内容");
-				// 	return false;
-				// };
-				// if(email){
-				// 	if(!checkEmail(email)){
-				// 		alert("请检查您输入的邮箱");
-				// 		return false;
-				// 	}
-				// }
-				// 设置在此处单击#button时要发生的事件
-				$.ajax({
-					type: "POST",
-					dataType: "json",
-					url: "{:url('Form/addPost')}" ,
-					data: $('#form').serialize(),
-					success: function (result) {
-						console.log(result);//打印服务端返回的数据(调试用)
-						if (result.code == 1) {
-							alert("提交成功")
-							document.getElementById("form").reset();
-						};
-					},
-					error : function() {
-						alert("提交失败");
-					}
-				})
-				
-			});
-			function isPhone(phone){
-				return /^1(3\d|4\d|5\d|6\d|7\d|8\d|9\d)\d{8}$/g.test(phone);
-			};
-			//判断用户输入的电子邮箱格式是否正确
-			function checkEmail(email){
-			　　var myReg=/^[a-zA-Z0-9_-]+@([a-zA-Z0-9]+\.)+(com|cn|net|org)$/;
-			　　if(myReg.test(email)){
-			　　　　return true;
-			　　}else{
-			　　　　return false;
-				}
-			}
-		});
-		document.getElementById("button").onclick = function() {
-			console.error("执行了");
-			var sMobile = document.getElementById("phone").value;
-			var sName = document.getElementById("name").value;
-			var sbuisiness = document.getElementById("buisiness").value;
-			if(sName == ''){
-				alert("请填写姓名");
-				return false;
-			}
-			if(!(/^1[3|5|7|8][0-9]\d{4,8}$/.test(sMobile))){
-				alert("请填写正确的手机号");
-				return false;
-			}
-			if(sbuisiness == ''){
-				alert("请填写咨询内容");
-				return false;
-			}
-			// 设置在此处单击#button时要发生的事件
-			$.ajax({
-				type: "POST",
-				dataType: "json",
-				url: "{:url('Form/addPost')}" ,
-				data: $('#form').serialize(),
-				success: function (result) {
-					console.log(result);//打印服务端返回的数据(调试用)
-					if (result.code == 1) {
-						alert("提交成功")
-						document.getElementById("form").reset();
-					};
-				},
-				error : function() {
-					alert("提交失败");
-				}
-			})
-		};
-	</script>
-	</body>
+    <!-- <script src="__TMPL__/public/assets/style/js/index.js"></script> -->
+    <script>
+        $(function () {
+            $("#submit-btn").on("click", function () {
+                var sName = $("#name").val();
+                var sMobile = $("#phone").val();
+                var sbuisiness = $("#buisiness").val();
+                var email = $("#email").val();
+                // if(!sName){
+                // 	alert("请填写姓名");
+                // 	return false;
+                // };
+                if (!sMobile) {
+                    alert("请填写手机号");
+                    return false;
+                } else if (!isPhone(sMobile)) {
+                    alert("请填写正确的手机号");
+                    return false;
+                };
+                // if(!sbuisiness){
+                // 	alert("请填写咨询内容");
+                // 	return false;
+                // };
+                // if(email){
+                // 	if(!checkEmail(email)){
+                // 		alert("请检查您输入的邮箱");
+                // 		return false;
+                // 	}
+                // }
+                // 设置在此处单击#button时要发生的事件
+                $.ajax({
+                    type: "POST",
+                    dataType: "json",
+                    url: "{:url('Form/addPost')}",
+                    data: $('#form').serialize(),
+                    success: function (result) {
+                        console.log(result);//打印服务端返回的数据(调试用)
+                        if (result.code == 1) {
+                            alert("提交成功")
+                            document.getElementById("form").reset();
+                        };
+                    },
+                    error: function () {
+                        alert("提交失败");
+                    }
+                })
+
+            });
+            function isPhone(phone) {
+                return /^1(3\d|4\d|5\d|6\d|7\d|8\d|9\d)\d{8}$/g.test(phone);
+            };
+            //判断用户输入的电子邮箱格式是否正确
+            function checkEmail(email) {
+                var myReg = /^[a-zA-Z0-9_-]+@([a-zA-Z0-9]+\.)+(com|cn|net|org)$/;
+                if (myReg.test(email)) {
+                    return true;
+                } else {
+                    return false;
+                }
+            }
+        });
+        document.getElementById("button").onclick = function () {
+            console.error("执行了");
+            var sMobile = document.getElementById("phone").value;
+            var sName = document.getElementById("name").value;
+            var sbuisiness = document.getElementById("buisiness").value;
+            if (sName == '') {
+                alert("请填写姓名");
+                return false;
+            }
+            if (!(/^1[3|5|7|8][0-9]\d{4,8}$/.test(sMobile))) {
+                alert("请填写正确的手机号");
+                return false;
+            }
+            if (sbuisiness == '') {
+                alert("请填写咨询内容");
+                return false;
+            }
+            // 设置在此处单击#button时要发生的事件
+            $.ajax({
+                type: "POST",
+                dataType: "json",
+                url: "{:url('Form/addPost')}",
+                data: $('#form').serialize(),
+                success: function (result) {
+                    console.log(result);//打印服务端返回的数据(调试用)
+                    if (result.code == 1) {
+                        alert("提交成功")
+                        document.getElementById("form").reset();
+                    };
+                },
+                error: function () {
+                    alert("提交失败");
+                }
+            })
+        };
+    </script>
+</body>
+
 </html>
