--- a/public/themes/simpleboot3/public/head.html
+++ b/public/themes/simpleboot3/public/head.html
@@ -80,9 +80,9 @@
                         <li data-url="application">
                             <p><a href="{:cmf_url('portal/Application/index')}" title="企业应用">企业应用</a></p>
                         </li>
-						<li data-url = "form">
-							<p><a href="{:cmf_url('portal/Form/index')}" title="预约方案" target="_blank">预约方案</a></p>
-						</li>
+                        <li data-url="form">
+                            <p><a href="{:cmf_url('portal/Form/index')}" title="预约方案">预约方案</a></p>
+                        </li>
                     </ul>
                     <!-- <div class="gengduo">
                         123
@@ -146,9 +146,9 @@
                 <li class="menu-splitL-li border-1px-rgba animate">
                     <a href="{:cmf_url('portal/Application/index')}" class="menu-splitL-item" title="企业应用">企业应用</a>
                 </li>
-				<li class="menu-splitL-li border-1px-rgba animate">
-				    <a href="{:cmf_url('portal/Form/index')}" class="menu-splitL-item" title="预约方案" target="_blank">预约方案</a>
-				</li>
+                <li class="menu-splitL-li border-1px-rgba animate">
+                    <a href="{:cmf_url('portal/Form/index')}" class="menu-splitL-item" title="预约方案" target="_blank">预约方案</a>
+                </li>
             </ul>
         </div>
     </div>
