--- a/public/themes/simpleboot3/portal/index.html
+++ b/public/themes/simpleboot3/portal/index.html
@@ -835,7 +835,7 @@
                         </div>
                     </volist>
                 </div>
-                <div class="more hidden-xs">更多新闻</div>
+                <div class="more hidden-xs"><a href="{:cmf_url('portal/News/index')}" >更多新闻</a></div>
             </div>
         </div>
         <div class="index-customer">
@@ -845,7 +845,7 @@
                 </div>
                 <div class="inner-small-title text-center">深耕人力资源服务业，为企业提供更优质的服务</div>
                 <include file="public@customers" />
-                <div class="more">查看所有客户案例</div>
+                <div class="more"><a href="{:cmf_url('portal/Customer/index')}">查看所有客户案例</a></div>
             </div>
         </div>
         <div class="index-bottom">
@@ -854,7 +854,7 @@
                     <p>以人为本，创造价值，多方共赢，长期发展</p>
                 </div>
                 <div class="text-center" style="color: #999;font-size: 0.25rem;">全国170+家直营分/子公司，量身定制，满足多个行业广泛业务需求</div>
-                <div class="solution-btn">获取定制解决方案</div>
+                <div class="solution-btn"><a href="{:cmf_url('portal/Form/index')}">获取定制解决方案</a></div>
             </div>
         </div>
 
