--- a/public/themes/admin_simpleboot3/portal/company/add.html
+++ b/public/themes/admin_simpleboot3/portal/company/add.html
@@ -29,8 +29,8 @@
 <body>
 <div class="wrap js-check-wrap">
     <ul class="nav nav-tabs">
-        <li><a href="{:url('Company/index')}">分公司地区管理</a></li>
-        <li class="active"><a href="{:url('Company/add')}">添加分公司地区</a></li>
+        <li><a href="{:url('Company/index')}">分公司管理</a></li>
+        <li class="active"><a href="{:url('Company/add')}">添加分公司</a></li>
     </ul>
     <form action="{:url('Company/addPost')}" method="post" class="form-horizontal js-ajax-form margin-top-20">
         <div class="row">
