--- a/public/themes/admin_simpleboot3/portal/company/edit.html
+++ b/public/themes/admin_simpleboot3/portal/company/edit.html
@@ -9,11 +9,11 @@
 <body>
 <div class="wrap js-check-wrap">
     <ul class="nav nav-tabs">
-        <li><a href="{:url('Company/index')}">分公司地区管理</a></li>
+        <li><a href="{:url('Company/index')}">分公司管理</a></li>
         <li>
-            <a href="{:url('Company/add')}">添加分公司地区</a>
+            <a href="{:url('Company/add')}">添加分公司</a>
         </li>
-        <li class="active"><a href="#">编辑分公司地区</a></li>
+        <li class="active"><a href="#">编辑分公司</a></li>
     </ul>
     <form action="{:url('Company/editPost')}" method="post" class="form-horizontal js-ajax-form margin-top-20">
         <div class="row">
