--- a/public/themes/admin_simpleboot3/portal/company/index.html
+++ b/public/themes/admin_simpleboot3/portal/company/index.html
@@ -3,14 +3,14 @@
 <body>
 <div class="wrap js-check-wrap">
     <ul class="nav nav-tabs">
-        <li class="active"><a href="javascript:;">所有分公司地区</a></li>
-        <li><a href="{:url('Company/add')}">添加分公司地区</a></li>
+        <li class="active"><a href="javascript:;">所有分公司</a></li>
+        <li><a href="{:url('Company/add')}">添加分公司</a></li>
     </ul>
     <form class="well form-inline margin-top-20" method="post" action="{:url('Company/index')}">
 
-        地区名称:
+        公司名称:
         <input type="text" class="form-control" name="name" style="width: 200px;"
-               value="{$name|default=''}" placeholder="请输入地区名称...">
+               value="{$name|default=''}" placeholder="请输入公司名称...">
         <input type="submit" class="btn btn-primary" value="搜索"/>
         <a class="btn btn-danger" href="{:url('Company/index')}">清空</a>
     </form>
@@ -30,7 +30,11 @@
                     </label>
                 </th>
                 <th width="50">ID</th>
-                <th width="130">地区名称</th>
+                <th width="130">公司名称</th>
+                <th width="130">所在地区</th>
+                <th width="130">公司地址</th>
+                <th width="130">手机号</th>
+                <th width="130">邮箱</th>
                 <th width="160">发布时间</th>
                 <th width="95">操作</th>
             </tr>
@@ -43,6 +47,10 @@
                     </td>
                     <td><b>{$vo.id}</b></td>
                     <td>{$vo.name}</td>
+                    <td>{$vo.areaname}</td>
+                    <td>{$vo.address}</td>
+                    <td>{$vo.phone}</td>
+                    <td>{$vo.email}</td>
                     <td>
                         <notempty name="vo.create_time">
                             {:date('Y-m-d H:i',$vo['create_time'])}
