--- a/public/themes/simpleboot3/portal/product.html
+++ b/public/themes/simpleboot3/portal/product.html
@@ -55,7 +55,7 @@
 			    </div>
 			    <div class="ourproduct_left_text">劳务派遣机构与派遣员工订立劳动合同，把劳动者派向用工单位，用工单位向派遣机构支付服务费的模式。临时性、辅助性、可替代性岗位的人才派遣服务。
 			    </div>
-			    <button><img src="__TMPL__/public/assets/style/imgs/product/ourproduct-yuyue.png" alt="">预约咨询</button>
+			    <button><a href="{:cmf_url('portal/Form/index')}"><img src="__TMPL__/public/assets/style/imgs/product/ourproduct-yuyue.png" alt="">预约咨询</a></button>
 			</div>
 			<div class="ourproduct_right">
 				<img src="__TMPL__/public/assets/style/imgs/product/ourproduct.png" alt="">
@@ -168,7 +168,7 @@
     		</div>
     		<div class="inner-small-title text-center">深耕人力资源服务业，为企业提供更优质的服务</div>
     		<include file="public@customers" />
-    		<div class="more">查看所有客户案例</div>
+    		<div class="more"><a href="{:cmf_url('portal/Customer/index')}">查看所有客户案例</a></div>
     	</div>
     </div>
 	<!-- 以人为本 -->
@@ -176,7 +176,7 @@
 		<div class="inner">
 			<div class="title">以人为本，创造价值，多方共赢，长期发展</div>
 			<div class="tag">全国170+家直营分/子公司，量身定制，满足多个行业广泛业务需求</div>
-			<button>获取定制解决方案</button>
+			<button><a href="{:cmf_url('portal/Form/index')}">获取定制解决方案</a></button>
 		</div>
 	</div>
 </div>
