--- a/public/themes/simpleboot3/portal/solution.html
+++ b/public/themes/simpleboot3/portal/solution.html
@@ -239,7 +239,7 @@
                         </div>
                     </div>
                 </div>
-                <button class="resolve_btn">获取定制解决方案</button>
+                <button class="resolve_btn"><a href="{:cmf_url('portal/Form/index')}">获取定制解决方案</a></button>
             </div>
         </div>
         <!-- 客户信赖 -->
@@ -250,7 +250,7 @@
                 </div>
                 <div class="inner-small-title text-center">深耕人力资源服务业，为企业提供更优质的服务</div>
                 <include file="public@customers" />
-                <div class="more">查看所有客户案例</div>
+                <div class="more"><a href="{:cmf_url('portal/Customer/index')}">查看所有客户案例</a></div>
             </div>
         </div>
     </div>
