--- a/public/themes/admin_simpleboot3/portal/company/index.html
+++ b/public/themes/admin_simpleboot3/portal/company/index.html
@@ -47,7 +47,7 @@
                     </td>
                     <td><b>{$vo.id}</b></td>
                     <td>{$vo.name}</td>
-                    <td>{$vo.company.areaname}</td>
+                    <td>{$vo.a_name}</td>
                     <td>{$vo.address}</td>
                     <td>{$vo.phone}</td>
                     <td>{$vo.email}</td>
