--- a/public/themes/simpleboot3/portal/application.html
+++ b/public/themes/simpleboot3/portal/application.html
@@ -21,13 +21,15 @@
 		<div class="application-box">
 			<div class="inner">
 				<div class="flex-box">
-					<div class="box-1">
-						<img src="__TMPL__/public/assets/style/imgs/application/1.png" />
-						<div class="flex-box">
-							<div class="name">雇工伞</div>
-							<div><a href="javascript:void(0)">点击访问</a></div>
+					<a href="https://www.eqibao.cn" target="_blank" title="雇工伞">
+						<div class="box-1">
+							<img src="__TMPL__/public/assets/style/imgs/application/1.png" />
+							<div class="flex-box">
+								<div class="name">雇工伞</div>
+								<div><a href="javascript:void(0)">点击访问</a></div>
+							</div>
 						</div>
-					</div>
+					</a>
 					<div class="box-2">
 						<div class="flex-box">
 							<div class="left">
