--- a/public/themes/admin_simpleboot3/portal/company/add.html
+++ b/public/themes/admin_simpleboot3/portal/company/add.html
@@ -46,7 +46,7 @@
                     <tr>
                         <th>所在地区<span class="form-required">*</span></th>
                         <td>
-                            <select class="form-control" name="parent_id" id="input-parent">
+                            <select class="form-control" name="post[area_id]" id="input-parent">
                                 <volist name="areaList" id="vo">
                                     <option value="{$vo.id}">{$vo.name}</option>
                                 </volist>
