--- a/public/themes/simpleboot3/portal/application.html
+++ b/public/themes/simpleboot3/portal/application.html
@@ -1,36 +1,39 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <include file="public@head"/>
-	<style>
-	.customer-box .customer-item{
-		margin-bottom: 20px;
-	}
-	.customer-box img{
-		width: 100%;
-	}
-	</style>
+    <include file="public@head" />
+    <style>
+        .customer-box .customer-item {
+            margin-bottom: 20px;
+        }
+
+        .customer-box img {
+            width: 100%;
+        }
+    </style>
 </head>
+
 <body>
-	<div class="application">
-		<div class="index-banner index-banner-top">
-			<div class="index-banner-box">
-				<div class="title">企业应用</div>
-			</div>
-		</div>
-		<div class="application-box">
-			<div class="inner">
-				<div class="flex-box">
-					<a href="https://www.eqibao.cn" target="_blank" title="雇工伞">
-						<div class="box-1">
-							<img src="__TMPL__/public/assets/style/imgs/application/1.png" />
-							<div class="flex-box">
-								<div class="name">雇工伞</div>
-								<div><a href="javascript:void(0)">点击访问</a></div>
-							</div>
-						</div>
-					</a>
-					<div class="box-2">
+    <div class="application">
+        <div class="index-banner index-banner-top">
+            <div class="index-banner-box">
+                <div class="title">企业应用</div>
+            </div>
+        </div>
+        <div class="application-box">
+            <div class="inner">
+                <div class="flex-box">
+                    <a href="https://www.eqibao.cn" target="_blank" title="雇工伞">
+                        <div class="box-1">
+                            <img src="__TMPL__/public/assets/style/imgs/application/1.png" />
+                            <div class="flex-box">
+                                <div class="name">雇工伞</div>
+                                <div><a href="javascript:void(0)">点击访问</a></div>
+                            </div>
+                        </div>
+                    </a>
+                    <!-- <div class="box-2">
 						<div class="flex-box">
 							<div class="left">
 								<img src="__TMPL__/public/assets/style/imgs/application/2.png" />
@@ -47,46 +50,62 @@
 								</div>
 							</div>
 						</div>
-					</div>
-				</div>
-				<div class="flex-box">
-					<div class="box-3">
-						<img src="__TMPL__/public/assets/style/imgs/application/3.png" />
-						<div class="flex-box">
-							<div class="name">CRM小程序</div>
-							<div><a href="javascript:void(0)">扫码访问</a></div>
-						</div>
-					</div>
-					<div class="box-2">
-						<div class="flex-box">
-							<div class="left">
-								<img src="__TMPL__/public/assets/style/imgs/application/4.png" />
-								<div>劳务派遣</div>
-							</div>
-							<div class="right">
-								<div class="item">
-									<img src="__TMPL__/public/assets/style/imgs/application/erweima_1.png" />
-									<div>劳务派遣H5</div>
-									<a href="javascript:void(0)">劳务派遣管理系统</a>
-								</div>
-								<div class="item">
-									<img src="__TMPL__/public/assets/style/imgs/application/erweima_1.png" />
-									<div>德劳网H5</div>
-									<a href="javascript:void(0)">德劳网PC端</a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+					</div> -->
+                    <div class="box-2">
+                        <div class="flex-box">
+                            <div class="left">
+                                <img src="__TMPL__/public/assets/style/imgs/application/4.png" />
+                                <div>劳务派遣</div>
+                            </div>
+                            <div class="right">
+                                <div class="item">
+                                    <img src="__TMPL__/public/assets/style/imgs/application/劳务派遣.png" />
+                                    <div>劳务派遣H5</div>
+                                    <a href="https://admin.dezhouhr.com/login" target="_blank">劳务派遣管理系统</a>
+                                </div>
+                                <div class="item">
+                                    <img src="__TMPL__/public/assets/style/imgs/application/德劳网.png" />
+                                    <div>德劳网H5</div>
+                                    <a href="https://74cms.hualaogroup.com/" target="_blank">德劳网PC端</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex-box">
+                    <!-- <div class="box-3">
+                        <img src="__TMPL__/public/assets/style/imgs/application/3.png" />
+                        <div class="flex-box">
+                            <div class="name">CRM小程序</div>
+                            <div><a href="javascript:void(0)">扫码访问</a></div>
+                        </div>
+                    </div> -->
+                    <div class="box-2 crm">
+                        <div class="flex-box">
+                            <div class="left">
+                                <img src="__TMPL__/public/assets/style/imgs/application/3.png" />
+                                <div>CRM小程序</div>
+                            </div>
+                            <div class="right">
+                                <div class="item">
+                                    <img src="__TMPL__/public/assets/style/imgs/application/crm.jpg" />
+                                    <div>扫码访问小程序</div>
+                                    <!-- <a href="javascript:void(0)">劳务派遣管理系统</a> -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
 
 
 
-<include file="public@footer"/>
+    <include file="public@footer" />
 </body>
+
 </html>
